interface/ogre_interface.h


#define EVENT_FRAME_STARTED 1
#define EVENT_FRAME_RENDERING_QUEUED 2
#define EVENT_FRAME_ENDED 4


// listener typedefs
typedef int(*FrameListenerEvent)(float,float,int);


typedef struct
{
    float w;
    float x;
    float y;
    float z;
} coiQuaternion;


typedef struct
{
    float x;
    float y;
    float z;
} coiVector3;


typedef struct
{
    const char* renderer_s;
    const char* plugin_folder_s;
    const char* window_title;
    const char* log_name;
    int width, height, auto_window;
} engine_options;



// Camera
DLL CameraHandle create_camera(const char* camera_name);


DLL CameraHandle get_camera(const char* camera_name);


DLL void camera_set_near_clip_distance(CameraHandle camera_handle, float d);


DLL void camera_set_far_clip_distance(CameraHandle camera_handle, float d);


DLL void camera_set_aspect_ratio(CameraHandle camera_handle, float w, float h);


DLL void camera_set_auto_aspect_ratio(CameraHandle camera_handle, int on);


DLL void camera_set_fovy(CameraHandle camera_handle, float angle);


DLL void camera_set_frustum_offset(CameraHandle camera_handle, const int offset_x, const int offset_y);


DLL void camera_set_focal_length(CameraHandle camera_handle, float fl);


DLL void camera_set_position(CameraHandle camera_handle, const float x, const float y, const float z);


DLL void camera_lookat(CameraHandle camera_handle, const float x, const float y, const float z);



// Entity
DLL EntityHandle create_entity(const char* entity_name, const char* mesh_file);


DLL void entity_set_material_name(EntityHandle handle, const char* name, const char* group_name);



// FrameListener
DLL void add_frame_listener(FrameListenerEvent frame_event,int frame_event_type);


DLL void remove_frame_listener(FrameListenerEvent frame_event);