interface/swig/ogre.lisp

;;; This file was automatically generated by SWIG (http://www.swig.org).
;;; Version 1.3.40
;;;
;;; Do not make changes to this file unless you know what you are doing--modify
;;; the SWIG interface file instead.

(in-package :ogre)

(define-foreign-library libllcoi
    (:unix (:or "libllcoi.so.3" "libllcoi.so"))
    (t (:default "libllcoi")))

(defun load-foreign-libraries ()
  (use-foreign-library libllcoi)
  (format t "~&[ogre] foreign library libllcoi loaded~%"))

(load-foreign-libraries)

(in-package :ogre)



;;;SWIG wrapper code starts here

(cl:defmacro defanonenum (&body enums)
   "Converts anonymous enums to defconstants."
  `(cl:progn ,@(cl:loop for value in enums
                        for index = 0 then (cl:1+ index)
                        when (cl:listp value) do (cl:setf index (cl:second value)
                                                          value (cl:first value))
                        collect `(cl:defconstant ,value ,index))))

(cl:eval-when (:compile-toplevel :load-toplevel)
  (cl:unless (cl:fboundp 'swig-lispify)
    (cl:defun swig-lispify (name flag cl:&optional (package cl:*package*))
      (cl:labels ((helper (lst last rest cl:&aux (c (cl:car lst)))
                    (cl:cond
                      ((cl:null lst)
                       rest)
                      ((cl:upper-case-p c)
                       (helper (cl:cdr lst) 'upper
                               (cl:case last
                                 ((lower digit) (cl:list* c #\- rest))
                                 (cl:t (cl:cons c rest)))))
                      ((cl:lower-case-p c)
                       (helper (cl:cdr lst) 'lower (cl:cons (cl:char-upcase c) rest)))
                      ((cl:digit-char-p c)
                       (helper (cl:cdr lst) 'digit 
                               (cl:case last
                                 ((upper lower) (cl:list* c #\- rest))
                                 (cl:t (cl:cons c rest)))))
                      ((cl:char-equal c #\_)
                       (helper (cl:cdr lst) '_ (cl:cons #\- rest)))
                      (cl:t
                       (cl:error "Invalid character: ~A" c)))))
        (cl:let ((fix (cl:case flag
                        ((constant enumvalue) "+")
                        (variable "*")
                        (cl:t ""))))
          (cl:intern
           (cl:concatenate
            'cl:string
            fix
            (cl:nreverse (helper (cl:concatenate 'cl:list name) cl:nil cl:nil))
            fix)
           package))))))

;;;SWIG wrapper code ends here


#+sbcl(sb-ext::set-floating-point-modes :traps nil)


(cl:defconstant #.(swig-lispify "EVENT_FRAME_STARTED" 'constant) 1)

(cl:export '#.(swig-lispify "EVENT_FRAME_STARTED" 'constant))

(cl:defconstant #.(swig-lispify "EVENT_FRAME_RENDERING_QUEUED" 'constant) 2)

(cl:export '#.(swig-lispify "EVENT_FRAME_RENDERING_QUEUED" 'constant))

(cl:defconstant #.(swig-lispify "EVENT_FRAME_ENDED" 'constant) 4)

(cl:export '#.(swig-lispify "EVENT_FRAME_ENDED" 'constant))

(cffi:defcstruct #.(swig-lispify "coiQuaternion" 'classname)
	(#.(swig-lispify "w" 'slotname) :float)
	(#.(swig-lispify "x" 'slotname) :float)
	(#.(swig-lispify "y" 'slotname) :float)
	(#.(swig-lispify "z" 'slotname) :float))

(cl:export '#.(swig-lispify "coiQuaternion" 'classname))

(cl:export '#.(swig-lispify "w" 'slotname))

(cl:export '#.(swig-lispify "x" 'slotname))

(cl:export '#.(swig-lispify "y" 'slotname))

(cl:export '#.(swig-lispify "z" 'slotname))

(cffi:defcstruct #.(swig-lispify "coiVector3" 'classname)
	(#.(swig-lispify "x" 'slotname) :float)
	(#.(swig-lispify "y" 'slotname) :float)
	(#.(swig-lispify "z" 'slotname) :float))

(cl:export '#.(swig-lispify "coiVector3" 'classname))

(cl:export '#.(swig-lispify "x" 'slotname))

(cl:export '#.(swig-lispify "y" 'slotname))

(cl:export '#.(swig-lispify "z" 'slotname))

(cffi:defcstruct #.(swig-lispify "coiColourValue" 'classname)
	(#.(swig-lispify "r" 'slotname) :float)
	(#.(swig-lispify "g" 'slotname) :float)
	(#.(swig-lispify "b" 'slotname) :float)
	(#.(swig-lispify "a" 'slotname) :float))

(cl:export '#.(swig-lispify "coiColourValue" 'classname))

(cl:export '#.(swig-lispify "r" 'slotname))

(cl:export '#.(swig-lispify "g" 'slotname))

(cl:export '#.(swig-lispify "b" 'slotname))

(cl:export '#.(swig-lispify "a" 'slotname))

(cffi:defcstruct #.(swig-lispify "engine_options" 'classname)
	(#.(swig-lispify "renderer_s" 'slotname) :string)
	(#.(swig-lispify "plugin_folder_s" 'slotname) :string)
	(#.(swig-lispify "window_title" 'slotname) :string)
	(#.(swig-lispify "log_name" 'slotname) :string)
	(#.(swig-lispify "width" 'slotname) :int)
	(#.(swig-lispify "height" 'slotname) :int)
	(#.(swig-lispify "auto_window" 'slotname) :int))

(cl:export '#.(swig-lispify "engine_options" 'classname))

(cl:export '#.(swig-lispify "renderer_s" 'slotname))

(cl:export '#.(swig-lispify "plugin_folder_s" 'slotname))

(cl:export '#.(swig-lispify "window_title" 'slotname))

(cl:export '#.(swig-lispify "log_name" 'slotname))

(cl:export '#.(swig-lispify "width" 'slotname))

(cl:export '#.(swig-lispify "height" 'slotname))

(cl:export '#.(swig-lispify "auto_window" 'slotname))

(cffi:defcenum #.(swig-lispify "OgreLightTypes" 'enumname)
	#.(swig-lispify "LT_POINT" 'enumvalue :keyword)
	#.(swig-lispify "LT_DIRECTIONAL" 'enumvalue :keyword)
	#.(swig-lispify "LT_SPOTLIGHT" 'enumvalue :keyword))

(cl:export '#.(swig-lispify "OgreLightTypes" 'enumname))

(cffi:defcenum #.(swig-lispify "OgreShadowTechnique" 'enumname)
	(#.(swig-lispify "SHADOWTYPE_NONE" 'enumvalue :keyword) #.#x00)
	(#.(swig-lispify "SHADOWDETAILTYPE_ADDITIVE" 'enumvalue :keyword) #.#x01)
	(#.(swig-lispify "SHADOWDETAILTYPE_MODULATIVE" 'enumvalue :keyword) #.#x02)
	(#.(swig-lispify "SHADOWDETAILTYPE_INTEGRATED" 'enumvalue :keyword) #.#x04)
	(#.(swig-lispify "SHADOWDETAILTYPE_STENCIL" 'enumvalue :keyword) #.#x10)
	(#.(swig-lispify "SHADOWDETAILTYPE_TEXTURE" 'enumvalue :keyword) #.#x20)
	(#.(swig-lispify "SHADOWTYPE_STENCIL_MODULATIVE" 'enumvalue :keyword) #.#x12)
	(#.(swig-lispify "SHADOWTYPE_STENCIL_ADDITIVE" 'enumvalue :keyword) #.#x11)
	(#.(swig-lispify "SHADOWTYPE_TEXTURE_MODULATIVE" 'enumvalue :keyword) #.#x22)
	(#.(swig-lispify "SHADOWTYPE_TEXTURE_ADDITIVE" 'enumvalue :keyword) #.#x21)
	(#.(swig-lispify "SHADOWTYPE_TEXTURE_ADDITIVE_INTEGRATED" 'enumvalue :keyword) #.#x25)
	(#.(swig-lispify "SHADOWTYPE_TEXTURE_MODULATIVE_INTEGRATED" 'enumvalue :keyword) #.#x26))

(cl:export '#.(swig-lispify "OgreShadowTechnique" 'enumname))

(cffi:defcenum #.(swig-lispify "OgreTerrainAlignment" 'enumname)
	(#.(swig-lispify "ALIGN_X_Z" 'enumvalue :keyword) #.0)
	(#.(swig-lispify "ALIGN_X_Y" 'enumvalue :keyword) #.1)
	(#.(swig-lispify "ALIGN_Y_Z" 'enumvalue :keyword) #.2))

(cl:export '#.(swig-lispify "OgreTerrainAlignment" 'enumname))

(cffi:defcenum #.(swig-lispify "OgreRenderOperationType" 'enumname)
	(#.(swig-lispify "OT_POINT_LIST" 'enumvalue :keyword) #.1)
	(#.(swig-lispify "OT_LINE_LIST" 'enumvalue :keyword) #.2)
	(#.(swig-lispify "OT_LINE_STRIP" 'enumvalue :keyword) #.3)
	(#.(swig-lispify "OT_TRIANGLE_LIST" 'enumvalue :keyword) #.4)
	(#.(swig-lispify "OT_TRIANGLE_STRIP" 'enumvalue :keyword) #.5)
	(#.(swig-lispify "OT_TRIANGLE_FAN" 'enumvalue :keyword) #.6))

(cl:export '#.(swig-lispify "OgreRenderOperationType" 'enumname))

(cffi:defcfun ("create_camera" #.(swig-lispify "create_camera" 'function)) :pointer
  (scene_manager_handle :pointer)
  (camera_name :string))

(cl:export '#.(swig-lispify "create_camera" 'function))

(cffi:defcfun ("get_camera" #.(swig-lispify "get_camera" 'function)) :pointer
  (scene_manager_handle :pointer)
  (camera_name :string))

(cl:export '#.(swig-lispify "get_camera" 'function))

(cffi:defcfun ("camera_set_near_clip_distance" #.(swig-lispify "camera_set_near_clip_distance" 'function)) :void
  (camera_handle :pointer)
  (d :float))

(cl:export '#.(swig-lispify "camera_set_near_clip_distance" 'function))

(cffi:defcfun ("camera_set_far_clip_distance" #.(swig-lispify "camera_set_far_clip_distance" 'function)) :void
  (camera_handle :pointer)
  (d :float))

(cl:export '#.(swig-lispify "camera_set_far_clip_distance" 'function))

(cffi:defcfun ("camera_set_aspect_ratio" #.(swig-lispify "camera_set_aspect_ratio" 'function)) :void
  (camera_handle :pointer)
  (w :float)
  (h :float))

(cl:export '#.(swig-lispify "camera_set_aspect_ratio" 'function))

(cffi:defcfun ("camera_set_auto_aspect_ratio" #.(swig-lispify "camera_set_auto_aspect_ratio" 'function)) :void
  (camera_handle :pointer)
  (on :int))

(cl:export '#.(swig-lispify "camera_set_auto_aspect_ratio" 'function))

(cffi:defcfun ("camera_set_fovy" #.(swig-lispify "camera_set_fovy" 'function)) :void
  (camera_handle :pointer)
  (angle :float))

(cl:export '#.(swig-lispify "camera_set_fovy" 'function))

(cffi:defcfun ("camera_set_frustum_offset" #.(swig-lispify "camera_set_frustum_offset" 'function)) :void
  (camera_handle :pointer)
  (offset_x :int)
  (offset_y :int))

(cl:export '#.(swig-lispify "camera_set_frustum_offset" 'function))

(cffi:defcfun ("camera_set_focal_length" #.(swig-lispify "camera_set_focal_length" 'function)) :void
  (camera_handle :pointer)
  (fl :float))

(cl:export '#.(swig-lispify "camera_set_focal_length" 'function))

(cffi:defcfun ("camera_set_position" #.(swig-lispify "camera_set_position" 'function)) :void
  (camera_handle :pointer)
  (x :float)
  (y :float)
  (z :float))

(cl:export '#.(swig-lispify "camera_set_position" 'function))

(cffi:defcfun ("camera_set_orientation" #.(swig-lispify "camera_set_orientation" 'function)) :void
  (camera_handle :pointer)
  (x :float)
  (y :float)
  (z :float)
  (w :float))

(cl:export '#.(swig-lispify "camera_set_orientation" 'function))

(cffi:defcfun ("camera_lookat" #.(swig-lispify "camera_lookat" 'function)) :void
  (camera_handle :pointer)
  (x :float)
  (y :float)
  (z :float))

(cl:export '#.(swig-lispify "camera_lookat" 'function))

(cffi:defcfun ("create_entity" #.(swig-lispify "create_entity" 'function)) :pointer
  (scene_manager_handle :pointer)
  (entity_name :string)
  (mesh_file :string))

(cl:export '#.(swig-lispify "create_entity" 'function))

(cffi:defcfun ("entity_set_material_name" #.(swig-lispify "entity_set_material_name" 'function)) :void
  (entity_handle :pointer)
  (name :string))

(cl:export '#.(swig-lispify "entity_set_material_name" 'function))

(cffi:defcfun ("entity_set_material_name_and_group" #.(swig-lispify "entity_set_material_name_and_group" 'function)) :void
  (entity_handle :pointer)
  (name :string)
  (group_name :string))

(cl:export '#.(swig-lispify "entity_set_material_name_and_group" 'function))

(cffi:defcfun ("add_frame_listener" #.(swig-lispify "add_frame_listener" 'function)) :void
  (frame_event :pointer)
  (frame_event_type :int))

(cl:export '#.(swig-lispify "add_frame_listener" 'function))

(cffi:defcfun ("remove_frame_listener" #.(swig-lispify "remove_frame_listener" 'function)) :void
  (frame_event :pointer))

(cl:export '#.(swig-lispify "remove_frame_listener" 'function))

(cffi:defcfun ("create_image" #.(swig-lispify "create_image" 'function)) :pointer)

(cl:export '#.(swig-lispify "create_image" 'function))

(cffi:defcfun ("image_load" #.(swig-lispify "image_load" 'function)) :void
  (image_handle :pointer)
  (filename :string))

(cl:export '#.(swig-lispify "image_load" 'function))

(cffi:defcfun ("image_load_group" #.(swig-lispify "image_load_group" 'function)) :void
  (image_handle :pointer)
  (filename :string)
  (group :string))

(cl:export '#.(swig-lispify "image_load_group" 'function))

(cffi:defcfun ("image_flip_around_x" #.(swig-lispify "image_flip_around_x" 'function)) :void
  (image_handle :pointer))

(cl:export '#.(swig-lispify "image_flip_around_x" 'function))

(cffi:defcfun ("image_flip_around_y" #.(swig-lispify "image_flip_around_y" 'function)) :void
  (image_handle :pointer))

(cl:export '#.(swig-lispify "image_flip_around_y" 'function))
